SysID: change form layout

--- a/SysID/index.html
+++ b/SysID/index.html
@@ -24,25 +24,25 @@
     <!-- FOR TRANSFER FUNCTION -->
     <div id="tf_form" style="display:none;">
       <label for="Input">Input Msg:</label>
-      <input type="text" id="input_name" name="input_name"><br><br>
+      <input type="text" id="input_name" name="input_name">
 
       <label for="Input">Input Field:</label>
       <input type="text" id="input_field" name="input_field"><br><br>
 
       <label for="Output">Output Msg:</label>
-      <input type="text" id="output_name" name="output_name"><br><br>
+      <input type="text" id="output_name" name="output_name">
 
       <label for="Output">Output Field:</label>
       <input type="text" id="output_field" name="output_field"><br><br>
 
       <label for="start time">Start time (s):</label>
-      <input type="number" id="starttime" name="starttime"><br><br>
+      <input type="number" id="starttime" name="starttime">
 
       <label for="end time">End time (s):</label>
       <input type="number" id="endtime" name="endtime"><br><br>
 
       <label for="start frequency">Start frequency (rad/sec):</label>
-      <input type="number" id="startfreq" name="startfreq"><br><br>
+      <input type="number" id="startfreq" name="startfreq">
 
       <label for="end frequency">End frequency (rad/sec):</label>
       <input type="number" id="endfreq" name="endfreq"><br><br>
@@ -76,17 +76,16 @@
       <input type="number" id="num_params" name="Inputs">
 
       <label for="number of constraints">Number of Constraints:</label>
-      <input type="number" id="num_cons" name="Inputs">
-
+      <input type="number" id="num_cons" name="Inputs"><br><br>
 
       <label for="start time">Start time (s):</label>
-      <input type="number" id="starttime_ss" name="starttime_ss"><br><br>
+      <input type="number" id="starttime_ss" name="starttime_ss">
 
       <label for="end time">End time (s):</label>
       <input type="number" id="endtime_ss" name="endtime_ss"><br><br>
 
       <label for="start frequency">Start frequency (rad/sec):</label>
-      <input type="number" id="startfreq_ss" name="startfreq_ss"><br><br>
+      <input type="number" id="startfreq_ss" name="startfreq_ss">
 
       <label for="end frequency">End frequency (rad/sec):</label>
       <input type="number" id="endfreq_ss" name="endfreq_ss"><br><br>
