MAVLInkDashboard: make edit checkbox larger

--- a/MAVLinkDashboard/index.html
+++ b/MAVLinkDashboard/index.html
@@ -138,9 +138,10 @@
                 <input type="file" id="loadBase" style="display:none" accept=".json">
                 <br><br>
                 <h6>Dashboard settings</h6>
-                <label for="edit_enabled">Enable widget edit:</label>
-                <input id="edit_enabled" type="checkbox">
-                <br>
+                <div style="height:1.5em; display:flex; align-content:center; margin-bottom: 5px;">
+                    <label for="edit_enabled">Enable widget edit:</label>&nbsp&nbsp
+                    <input id="edit_enabled" type="checkbox" style="width:1.5em; height:1.5em;">
+                </div>
                 <label for="num_columns">Columns:</label>
                 <input id="num_columns" type="number" min="2" max="12" step="1">
                 <br>
