--- a/MAVLinkDashboard/index.html
+++ b/MAVLinkDashboard/index.html
@@ -50,7 +50,7 @@
     <div id="edit_overlay" style="position:fixed; top:0; left:0; bottom:0; right:0; background-color:rgba(255,255,255,0.7); z-index:999; padding:1%; visibility:hidden">
         <div style="display:flex; flex-direction:column; width:100%; height:100%; background-color:#000; border-radius: 4px; padding: 5px 9px;">
             <div style="display:flex; justify-content: right; align-items: center; width:100%; height:2em; padding:2px; box-sizing:border-box;">
-                <span id="NameSpan" style="position:fixed; color:white; left:calc(2% + 10px)">Widget Editor</span>
+                <span id="NameSpan" style="position:fixed; color:white; left:calc(2% + 10px); font-size:1.2em;">Widget Editor</span>
                 <svg id="Close" style="cursor:pointer; max-width:80%; max-height:80%;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path style="fill:white" d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>
             </div>
             <table style="width:100%; height:100%; flex:1; box-sizing:border-box;">
@@ -107,7 +107,7 @@
     <template id="widget_tip_template">
         <div style="display:flex; flex-direction:column; min-width:300px;">
             <div style="display:flex; justify-content: right; align-items: center; width: 100%; height:2em; padding:2px; box-sizing:border-box;">
-                <span id="NameSpan" style="position:absolute; left:10px"></span>
+                <span id="NameSpan" style="position:absolute; left:10px; font-size:1.2em;"></span>
                 <svg id="Edit" style="cursor:pointer; max-width:80%; max-height:80%;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path style="fill:white" d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"/></svg>
                 &nbsp&nbsp
                 <svg id="Save" style="cursor:pointer; max-width:80%; max-height:80%;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path style="fill:white" d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 242.7-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7 288 32zM64 352c-35.3 0-64 28.7-64 64l0 32c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-32c0-35.3-28.7-64-64-64l-101.5 0-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352 64 352zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"/></svg>
@@ -125,7 +125,7 @@
     <template id="settings_tip_template">
         <div style="display:flex; flex-direction:column;">
             <div style="display:flex; justify-content: right; align-items: center; width: 400px; height:2em; padding:2px; box-sizing:border-box;">
-                <span style="position:absolute; left:10px">Settings</span>
+                <span style="position:absolute; left:10px; font-size:1.2em;">Settings</span>
                 <svg id="Close" style="cursor:pointer; max-width:80%; max-height:80%;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path style="fill:white" d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>
             </div>
             <div id="form" style="border-radius:4px; padding:5px; background-color:white; color:#000; flex:1">
@@ -157,7 +157,7 @@
     <template id="connection_tip_template">
         <div style="display:flex; flex-direction:column;">
             <div style="display:flex; justify-content: right; align-items: center; width: 400px; height:2em; padding:2px; box-sizing:border-box;">
-                <span style="position:absolute; left:10px">Connection Settings</span>
+                <span style="position:absolute; left:10px; font-size:1.2em;">Connection Settings</span>
                 <svg id="Close" style="cursor:pointer; max-width:80%; max-height:80%;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path style="fill:white" d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/></svg>
             </div>
             <div id="form" style="border-radius:4px; padding:5px; background-color:white; color:#000; flex:1">
