--- a/SysID/index.html
+++ b/SysID/index.html
@@ -8,10 +8,26 @@
 
     <script type="text/javascript" src="SysID.js"></script>
   </head>
+
+  <table style="width:1200px">
+    <tr><td>
+      <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
+    </td><td>
+      <a href="https://github.com/ArduPilot/WebTools"><img src="../images/github-mark.png" style="width:60px"></a>
+      <br>
+      <a href="https://github.com/ArduPilot/WebTools"><img src="../images/GitHub_Logo.png" style="width:60px"></a>
+    </td></tr>
+  </table>
+  <table>
+    <tr><td style="width:1200px">
+      <h1 style="text-align:center; margin-block-end: 0.25em;"><a href="" style="color: #000000; text-decoration:none;">ArduPilot System Identification Tool</a></h1>
+    </td></tr>
+  </table>
+
   <body>
     <div>
       <p>Output:</p>
-      <textarea id="output" style="width: 100%; height: 500px;" rows="10" disabled></textarea>
+      <textarea id="output" style="width: 1200px; height: 500px;" rows="10" disabled></textarea>
     </div>
 
     <div>
